testsuite/tests/rename/should_compile/T11164a.hs
{-# LANGUAGE TypeFamilies #-}
module T11164a where

data family T a
