testsuite/tests/rename/should_fail/T23570_aux.hs
{-# LANGUAGE TypeFamilies #-}

module T23570_aux where

class C a where
  type T a
  meth :: a -> T a
